--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
                 </section>
                 <section class="about flow">
                     <h3>About</h3>
-                    <p>Lead front-end developer for both Archer Malmo Austin and Memphis offices, my client portfolio includes extensive digital work for FedEx, Pfizer-Zoetis, Dell, Implus, Palm Beach Tan and Hanger Clinic. My ability to bring creative ideas to life across digital channels shines through nearly a decade of experience in development and design, all while being conscious of the effect on the environment and the people that use the product.</p>
+                    <p>Lead front-end developer for both Archer Malmo Austin and Memphis offices, my client portfolio includes extensive digital work for FedEx, Pfizer-Zoetis, Implus, Palm Beach Tan, Hanger Clinic and Kestra Financial. My ability to bring creative ideas to life across digital channels shines through nearly a decade of experience in development and design, all while being conscious of the effect on the environment and the people that use the product.</p>
                 </section>
                 <section class="skills flow">
                     <h3>Skills</h3>
@@ -51,7 +51,7 @@
                                 <li>Facilitating collaboration between design and engineering</li>
                                 <li>Improving efficiencies and collaboration throughout the team across offices</li>
                                 <li>Bringing to life products such as websites, e-commerce sites, web applications, user interfaces, experiential sites, interactive banners, and more</li>
-                                <li>Working with clients such as Implus, Hanger Clinic, Kestra Financial, Dell, and Smile Doctors</li>
+                                <li>Working with clients such as Implus, Hanger Clinic, Kestra Financial, and Smile Doctors</li>
                             </ul>
                         </li>
                         <li>
@@ -90,12 +90,9 @@
                 </section>
             </article>
         </main>
-<<<<<<< HEAD
         <footer>
-            <p class="footer-links"><a href="/resume.html">Resume</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
+            <p class="footer-links"><a href="/">Portfolio</a> | <a href="//linkedin.com/in/adam-hite">LinkedIn</a></p>
             <p class="small">Copyright ©2020 Adam Hite</p>
         </footer>
-=======
->>>>>>> 89af801e3aad39c67cea972733f7538fc170bf73
     </body>
 </html>
