--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6161ff">
         <meta name="msapplication-TileColor" content="#e3551d">
         <meta name="theme-color" content="#ffffff">
-        <style>@font-face{font-family:courier_primeregular;src:url(/fonts/courier_prime-webfont.woff2) format('woff2'),url(/fonts/courier_prime-webfont.woff) format('woff');font-weight:400;font-style:normal}@font-face{font-family:gilroy-extrabold;src:url(/fonts/gilroy-extrabold-webfont.woff2) format('woff2'),url(/fonts/gilroy-extrabold-webfont.woff) format('woff');font-weight:400;font-style:normal}html{line-height:1.15;font-display:swap}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px;margin-top:0}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:focus,a:hover{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,:after,:before{-webkit-box-sizing:inherit;box-sizing:inherit}img{vertical-align:middle}body{font-family:courier_primeregular,Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#004cff}a:not([class]){-webkit-text-decoration-skip:ink;text-decoration-skip-ink:auto}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1,h2,h3,h4,h5{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:400}h1{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:1.5rem;line-height:1.2;margin-bottom:.5rem}h4{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;margin-bottom:0}p{margin-top:0}.section2{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first img{width:100%;height:100%;max-height:540px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid ul{margin-top:1rem}.work-grid li li{margin-bottom:0;padding:0;width:100%}.work-grid img{border-radius:8px;box-shadow:0 1px 1px rgba(0,0,0,.12),0 8px 8px rgba(0,0,0,.12),0 16px 16px rgba(0,0,0,.12);-webkit-box-shadow:0 0 20px rgba(0,0,0,.2);box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}@media only screen and (min-width:540px){.work-grid{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style>
+        <style>@font-face{font-family:courier_primeregular;src:url(/fonts/courier_prime-webfont.woff2) format('woff2'),url(/fonts/courier_prime-webfont.woff) format('woff');font-weight:400;font-style:normal}@font-face{font-family:gilroy-extrabold;src:url(/fonts/gilroy-extrabold-webfont.woff2) format('woff2'),url(/fonts/gilroy-extrabold-webfont.woff) format('woff');font-weight:400;font-style:normal}html{line-height:1.15;font-display:swap}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px;margin-top:0}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:focus,a:hover{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,:after,:before{-webkit-box-sizing:inherit;box-sizing:inherit}img{vertical-align:middle}body{font-family:courier_primeregular,Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#004cff}a:not([class]){-webkit-text-decoration-skip:ink;text-decoration-skip-ink:auto}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1,h2,h3,h4,h5{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:400}h1{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:1.5rem;line-height:1.2;margin-bottom:.5rem}h4{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;margin-bottom:0}p{margin-top:0}.section2{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first img{width:100%;height:100%;max-height:540px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid ul{margin-top:1rem}.work-grid li li{margin-bottom:0;padding:0;width:100%}.work-grid img{border-radius:8px;box-shadow:0 1px 1px rgba(0,0,0,.12),0 8px 8px rgba(0,0,0,.12),0 16px 16px rgba(0,0,0,.12);-webkit-box-shadow:0 0 20px rgba(0,0,0,.2);box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}.work-grid [href]{overflow-wrap:break-word;word-wrap:break-word;-ms-word-break:break-all;word-break:break-all;word-break:break-word;-ms-hyphens:auto;-moz-hyphens:auto;-webkit-hyphens:auto;hyphens:auto}@media only screen and (min-width:540px){.work-grid{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style>
     </head>
     <body>
         <header>
@@ -35,30 +35,57 @@
                 </div>
                 <div class="second">
                     <h2>Hey Y'all!</h2>
-                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a>. My ability to bring creative ideas to life across digital channels shines through a decade of professional experience in development and&nbsp;design.</p>
-                    <p>I am most passionate about accessibility and performance. I strive to build products that run on renewable energy, use the least amount of resources, are accessible to all, allow users to control their data, are honest and don't exploit, support an economy that helps people and the planet, and will function when users need them most.</p>
-                    <p>In my free time I enjoy exploring the wilderness, competing in bike polo tournaments, roasting coffee and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
+                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a> in Austin, originally from Memphis. I lean towards the <a href="//bradfrost.com/blog/post/frontend-design-react-and-a-bridge-over-the-great-divide/">front of the frontend</a>.</p>
+                    <p>I am mostly passionate about accessibility, inclusivity and performance. I strive to work on products that are <a href="//sustainablewebmanifesto.com">clean, efficient, open, honest, and regenerative</a>. I try to consider how every aspect of my life effects the planet.</p>
+                    <p>In my free time I enjoy exploring the wilderness, getting more people to play bike polo, gardening, roasting coffee and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
             <section class="section3">
                 <h2>Recent Work</h2>
                 <ul class="work-grid">
                     <li>
+                        <picture>
+                            <source srcset="./img/work8-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work8-th.jpg" alt="screenshot of The Long Center website">
+                        </picture>
+                        <h3><a href="//hangerclinic.com">Hanger Clinic</a></h3>
+                        <ul>
+                            <li>HTML, PHP, CSS, Javascript</li>
+                            <li>CMS Integration (Wordpress)</li>
+                            <li>Increased page speed by 52%</li>
+                            <li>Reduced page weight by 75%</li>
+                            <li>Boosted speed index by 67%</li>
+                            <li>Running on 100% sustainable energy</li>
+                        </ul>
+                    </li>
+                    <li>
                         <img loading="lazy" width="500" height="260" src="img/work7-th.jpg" alt="screenshot of The Long Center website">
-                        <h3>The Long Center</h3>
-                        <a href="//thelongcenter.org">https://thelongcenter.org</a>
+                        <h3><a href="//thelongcenter.org">The Long Center</a></h3>
                         <ul>
                             <li>HTML/PHP</li>
                             <li>CSS</li>
                             <li>Javascript</li>
                             <li>Animations (GSAP)</li>
                             <li>CMS Integration (Wordpress)</li>
+                            <li>Running on 100% sustainable energy</li>
                         </ul>
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work1-th.jpg" alt="screenshot of The Balega Difference">
-                        <h3>The Balega Difference</h3>
-                        <a href="//balega-socks.implus.com/the-balega-socks-difference">https://balega-socks.implus.com</a>
+                        <h3><a href="//balega-socks.implus.com/the-balega-socks-difference">Balega Socks: The Balega Difference</a></h3>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Javascript</li>
+                            <li>Animations (GSAP)</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <picture>
+                            <source srcset="./img/work9-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work9-th.jpg" alt="screenshot of the Balega Socks Find Your Fit website">
+                        </picture>
+                        <h3><a href="//balega-socks.implus.com/the-balega-socks-difference">Balega Socks: Find Your Fit</a></h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -68,8 +95,7 @@
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work3-th.jpg" alt="screenshot of Palm Beach Tan website">
-                        <h3>Palm Beach Tan</h3>
-                        <p><a href="//palmbeachtan.com">https://palmbeachtan.com</a></p>
+                        <h3><a href="//palmbeachtan.com">Palm Beach Tan</a></h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -79,8 +105,7 @@
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work4-th.jpg" alt="screenshot of Kestra Financial website">
-                        <h3>Kestra Financial</h3>
-                        <p><a href="//kestrafinancial.com">https://kestrafinancial.com</a></p>
+                        <h3><a href="//kestrafinancial.com">Kestra Financial</a></h3>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -91,23 +116,12 @@
                     </li>
                     <li>
                         <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
-                        <h3>2017 World Hardcourt Bike Polo Championship</h3>
-                        <p><a href="//nahardcourt.com/whbpc">http://whbpc.org</a></p>
+                        <h3><a href="//nahardcourt.com/whbpc">2017 World Hardcourt Bike Polo Championship</a></h3>
                         <ul>
                             <li>Design</li>
                             <li>HTML/PHP</li>
                             <li>CSS</li>
                             <li>CMS Integration (Wordpress)</li>
-                        </ul>
-                    </li>
-                    <li>
-                        <img loading="lazy" width="500" height="260" src="img/work2-th.jpg" alt="screenshot of Kestra Financial Advisor Complete">
-                        <h3>Advisor Complete by Kestra Financial</h3>
-                        <a href="img/work2.jpg">view screenshot</a>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
                         </ul>
                     </li>
                 </ul>
