added more work

--- a/index.html
+++ b/index.html
@@ -94,7 +94,10 @@
                         </ul>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work3-th.jpg" alt="screenshot of Palm Beach Tan website">
+                        <picture>
+                            <source srcset="./img/work3-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work3-th.jpg" alt="screenshot of the Palm Beach Tan website">
+                        </picture>
                         <h3><a href="//palmbeachtan.com">Palm Beach Tan</a></h3>
                         <ul>
                             <li>HTML</li>
@@ -104,7 +107,10 @@
                         </ul>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work4-th.jpg" alt="screenshot of Kestra Financial website">
+                        <picture>
+                            <source srcset="./img/work4-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work4-th.jpg" alt="screenshot of the Kestra Financial website">
+                        </picture>
                         <h3><a href="//kestrafinancial.com">Kestra Financial</a></h3>
                         <ul>
                             <li>HTML</li>
@@ -115,8 +121,11 @@
                         </ul>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
-                        <h3><a href="//nahardcourt.com/whbpc">2017 World Hardcourt Bike Polo Championship</a></h3>
+                        <picture>
+                            <source srcset="./img/work6-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work6-th.jpg" alt="screenshot of the 2017 World Hardcourt Bike Polo Championship website">
+                        </picture>
+                        <h3>2017 World Hardcourt Bike Polo Championship</h3>
                         <ul>
                             <li>Design</li>
                             <li>HTML/PHP</li>
