--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
                         </ul>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work7-th.jpg" alt="screenshot of The Long Center website">
+                        <picture>
+                            <source srcset="./img/work7-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work7-th.jpg" alt="screenshot of The Long Center website">
+                        </picture>
                         <h3><a href="//thelongcenter.org">The Long Center</a></h3>
                         <ul>
                             <li>HTML/PHP</li>
@@ -71,7 +74,10 @@
                         </ul>
                     </li>
                     <li>
-                        <img loading="lazy" width="500" height="260" src="img/work1-th.jpg" alt="screenshot of The Balega Difference">
+                        <picture>
+                            <source srcset="./img/work1-th.webp 1x" type="image/webp">
+                            <img loading="lazy" width="500" height="260" src="./img/work1-th.jpg" alt="screenshot of  The Balega Difference">
+                        </picture>
                         <h3><a href="//balega-socks.implus.com/the-balega-socks-difference">Balega Socks: The Balega Difference</a></h3>
                         <ul>
                             <li>HTML</li>
