--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
                 <div class="second">
                     <h2>Hey Y'all!</h2>
-                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a> in Austin, originally from Memphis. In a time of <a href="https://css-tricks.com/the-great-divide">The Great Divide</a>, I lean towards the <a href="//bradfrost.com/blog/post/frontend-design-react-and-a-bridge-over-the-great-divide/">front of the frontend</a>.</p>
-                    <p>I am mostly passionate about accessibility, inclusivity and performance. I strive to work on products that are <a href="//sustainablewebmanifesto.com">clean, efficient, open, honest, and regenerative</a>. I try to consider how every aspect of my life effects the planet.</p>
-                    <p>In my free time I enjoy exploring the wilderness, getting more people to play bike polo, gardening, roasting coffee and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
+                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a> in Austin (since 2012), originally from Memphis. In a time of <a href="https://css-tricks.com/the-great-divide">The Great Divide</a>, I lean towards the <a href="//bradfrost.com/blog/post/frontend-design-react-and-a-bridge-over-the-great-divide/">front of the frontend</a>.</p>
+                    <p>I am mostly passionate about accessibility, inclusivity and performance. I strive to work on products that are <a href="//sustainablewebmanifesto.com">clean, efficient, open, honest, and regenerative</a>. My carbon footprint is very important to me. I consider it in everything from how I commute, how I vote and even the work that I do.</p>
+                    <p>In my free time I enjoy exploring the wilderness, getting more people to play bike polo, roasting coffee, gardening, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
             <section class="section3">
