--- a/resume.html
+++ b/resume.html
@@ -80,10 +80,10 @@
                     <h3>Community</h3>
                     <ul>
                         <li><a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a> - <em>Board Member (Secretary)</em></li>
-                        <li><a href="//foodnotbombs.net">Food Not Bombs</a></li>
-                        <li><a href="//treefolks.org">Tree Folks</a></li>
-                        <li><a href="//insidebooksproject.org">Inside Books Project</a></li>
-                        <li><a href="//girlswhocode.com">Girls Who Code</a></li>
+                        <li><a href="//foodnotbombs.net">Food Not Bombs</a> (organizer)</li>
+                        <li><a href="//treefolks.org">Tree Folks</a> (volunteer)</li>
+                        <li><a href="//insidebooksproject.org">Inside Books Project</a> (volunteer)</li>
+                        <li><a href="//girlswhocode.com">Girls Who Code</a> (volunteer)</li>
                     </ul>
                 </section>
             </article>
