--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Adam Hite | Front-End Developer | Austin, TX</title>
-        <meta name="description" content="I am an Austin-based front-end developer who believes in building fast, accessible, and responsive websites.">
+        <meta name="description" content="I am a front-end developer living in Austin, TX who believes in building fast, accessible, sustainable, and responsive websites.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
-        <meta name="google-site-verification" content="9ypFXhSn8ffh9neNkrCfnluC-o-uAAOTmIOvFojxDtA" />
         <style>@font-face{font-family:courier_primeregular;src:url(/fonts/courier_prime-webfont.woff2) format('woff2'),url(/fonts/courier_prime-webfont.woff) format('woff');font-display:swap;font-weight:400;font-style:normal}@font-face{font-family:gilroy-extrabold;src:url(/fonts/gilroy-extrabold-webfont.woff2) format('woff2'),url(/fonts/gilroy-extrabold-webfont.woff) format('woff');font-display:swap;font-weight:400;font-style:normal}html{line-height:1.15}body{margin:0 auto;max-width:1440px}header,section{display:block}h1{font-size:2em;margin:.67em 0}h2{font-size:18px;margin-top:0}main{display:block}a{background-color:transparent;-webkit-text-decoration-skip:objects}a:focus,a:hover{text-decoration:underline}img{border-style:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;color:#222;font-size:1em;line-height:1.4;margin:0;padding:0}*,:after,:before{-webkit-box-sizing:inherit;box-sizing:inherit}img{vertical-align:middle}body{font-family:courier_primeregular,Courier New,Courier,Lucida Sans Typewriter,Lucida Typewriter,monospace;font-size:18px;line-height:1.6;padding:0}img{height:auto;max-width:100%}a{color:#004cff}a:not([class]){-webkit-text-decoration-skip:ink;text-decoration-skip-ink:auto}header{background-color:#fff;padding:4rem}@media only screen and (min-width:720px){header{padding:8rem 4rem}}.section1{margin:0 auto;max-width:720px}header p{font-size:24px}h1,h2,h3,h4,h5{-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;font-weight:400}h1{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:48px;line-height:1.2;margin-top:0}h2{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:24px}@media only screen and (min-width:720px){h2{font-size:36px}}h3{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;font-size:1.5rem;line-height:1.2;margin-bottom:.5rem}h4{font-family:gilroy-extrabold,Arial,Helvetica,sans-serif;margin-bottom:0}p{margin-top:0}.section2{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;margin-bottom:2rem}@media only screen and (min-width:720px){.section2{-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;margin-bottom:6rem}}@media only screen and (min-width:720px){.section2 .first,.section2 .second{width:50%}}.section2 .first img{width:100%;height:100%;max-height:540px;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center}@media only screen and (min-width:720px){.section2 .first{background-size:720px auto}}.section2 .second{padding:1rem 4rem}.section2 .second h4{margin-bottom:1rem}.section3{padding:2rem}.work-grid{list-style:none;margin:0;padding:0}.work-grid li{margin-bottom:6rem}.work-grid ul{margin-top:1rem}.work-grid li li{margin-bottom:0;padding:0;width:100%}.work-grid img{border-radius:8px;box-shadow:0 1px 1px rgba(0,0,0,.12),0 8px 8px rgba(0,0,0,.12),0 16px 16px rgba(0,0,0,.12);-webkit-box-shadow:0 0 20px rgba(0,0,0,.2);box-shadow:0 0 20px rgba(0,0,0,.2)}.work-grid p{color:#666;font-size:16px;margin-bottom:0}.work-grid [href]{overflow-wrap:break-word;word-wrap:break-word;-ms-word-break:break-all;word-break:break-all;word-break:break-word;-ms-hyphens:auto;-moz-hyphens:auto;-webkit-hyphens:auto;hyphens:auto}@media only screen and (min-width:540px){.work-grid{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.work-grid li{margin-bottom:2rem;padding:1rem;width:50%}}@media only screen and (min-width:720px){.work-grid li{width:33.333%}}footer{padding:3rem 1rem 4rem;text-align:center}footer .small{font-size:14px;color:#666}</style>
     </head>
     <body>
         <header>
             <section class="section1">
                 <h1>Adam Hite</h1>
-                <p>I am a front-end developer living in Austin, TX who believes in building fast, accessible, and responsive websites.</p>
+                <p>I am a front-end developer living in Austin, TX who believes in building fast, accessible, sustainable, and responsive websites.</p>
             </section>
         </header>
         <main>
@@ -34,9 +33,9 @@
                 </div>
                 <div class="second">
                     <h2>Hey Y'all!</h2>
-                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a> in Austin (since 2012), originally from Memphis. In a time of <a href="https://css-tricks.com/the-great-divide">The Great Divide</a>, I lean towards the <a href="//bradfrost.com/blog/post/frontend-design-react-and-a-bridge-over-the-great-divide/">front of the frontend</a>.</p>
-                    <p>I am mostly passionate about accessibility, inclusivity and performance. I strive to work on products that are <a href="//sustainablewebmanifesto.com">clean, efficient, open, honest, and regenerative</a>. My carbon footprint is very important to me. I consider it in everything from how I commute, how I vote and even the work that I do.</p>
-                    <p>In my free time I enjoy exploring the wilderness, getting more people to play bike polo, roasting coffee, gardening, and spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
+                    <p>I work as a lead front-end developer at <a href="//archermalmo.com">Archer Malmo</a> in Austin (since 2012), originally from Memphis. In a time of <a href="https://css-tricks.com/the-great-divide">The Great Divide</a>, I lean towards the &ldquo;<a href="//bradfrost.com/blog/post/frontend-design-react-and-a-bridge-over-the-great-divide/">front of the frontend</a>&rdquo;.</p>
+                    <p>I am mostly passionate about accessibility, inclusivity and performance. I strive to work on products that are <a href="//sustainablewebmanifesto.com">clean, efficient, open, honest, and regenerative</a>. While individual choices aren't as impactful as large-scale policy changes needed to stop climate change, I still try to reduce carbon emmissions as much as possible, if that's choosing a web host or or riding a bicycle to work. It makes me feel good.</p>
+                    <p>In my free time I enjoy exploring the wilderness, trying to get more people to play bike polo, roasting coffee, gardening, planting trees, spending time with my partner and two pups. I am also a board member for the <a href="//nahardcourt.com">North American Hardcourt Bike Polo Association</a>.</p>
                 </div>
             </section>
             <section class="section3">
@@ -49,7 +48,7 @@
                         </picture>
                         <h3><a href="//hangerclinic.com">Hanger Clinic</a></h3>
                         <ul>
-                            <li>HTML, PHP, CSS, Javascript</li>
+                            <li>PHP, HTML, CSS, Javascript</li>
                             <li>CMS Integration (Wordpress)</li>
                             <li>Increased page speed by 52%</li>
                             <li>Reduced page weight by 75%</li>
@@ -64,10 +63,8 @@
                         </picture>
                         <h3><a href="//thelongcenter.org">The Long Center</a></h3>
                         <ul>
-                            <li>HTML/PHP</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>Animations (GSAP)</li>
+                            <li>PHP, HTML, CSS, Javascript</li>
+                            <li>GSAP Animations</li>
                             <li>CMS Integration (Wordpress)</li>
                             <li>Running on 100% sustainable energy</li>
                         </ul>
